change style settings + reformat of everything (Dan)